<resources>
    <string name="app_name">Smart home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="room">Room</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="action_add_device">add device</string>
    <string name="action_list_device">list device</string>


    <string name="title_activity_update_room">Update room</string>
    <string name="title_activity_add_room"> Add room</string>
    <string name="title_activity_add_device_in_room">Add device</string>

    <string name="title_activity_register">Register user</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_User">Profile</string>


    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="prompt_name">Full name</string>
    <string name="prompt_dob">Birthday</string>
    <string name="prompt_street">Street</string>
    <string name="prompt_district">District</string>
    <string name="prompt_city">City</string>
    <string name="prompt_postcode">Postcode</string>
    <string name="prompt_home">Home phone number</string>
    <string name="prompt_phone">Phone number</string>
    <string name="prompt_cfpass">Comform password</string>
    <string name="error_invalid_cfpassword">Comform password error</string>

    <string name="title_activity_user"></string>
    <string name="action_change_name">change name</string>
    <string name="action_change_email">change email</string>
    <string name="action_active_email">active email</string>

    <string name="speech_prompt">Say something…</string>
    <string name="speech_not_supported">Sorry! Your deviceDetail doesn\'t support speech input</string>
    <string name="tap_on_mic">Tap on mic to speak</string>
</resources>
